# ferro

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  AUDIT_AND_ROADMAP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON.md  COMPETITIVE_PARITY_MATRIX.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  PARITY_CLOSURE_PLAN.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v3.1.0.md  ROADMAP.md  ROADMAP_v3.md  ROADMAP_v4.md  ROADMAP_v5.md  SECURITY.md  VERSION.md  deny.toml  docker-compose.chaos.yml  docker-compose.pg.yml  docker-compose.redis.yml  docker-compose.yml  ferro.toml.example  flake.nix  init_requirements.md  rustfmt.toml
cli/: Cargo.toml  README.md
cli/src/: main.rs
crates/admin/: Cargo.toml  README.md
crates/admin/src/: api.rs  app.rs  lib.rs  main.rs  state.rs
crates/admin/src/components/: badge.rs  chart.rs  focus_trap.rs  header.rs  mod.rs  modal.rs  plugin_marketplace.rs  sidebar.rs  stats_card.rs  table.rs
crates/admin/src/pages/: audit.rs  dashboard.rs  federation.rs  login.rs  mod.rs  monitoring.rs  plugin_marketplace.rs  settings.rs  storage.rs  users.rs  webhooks.rs
crates/ai/: Cargo.toml
crates/ai/src/: embedding.rs  error.rs  lib.rs  semantic.rs  tagging.rs
crates/audit-log/: Cargo.toml
crates/audit-log/src/: audit_log.rs  chain.rs  error.rs  export.rs  lib.rs  retention.rs
crates/auth/: Cargo.toml
crates/auth/benches/: auth_bench.rs
crates/auth/src/: api_keys.rs  api_keys_proptest.rs  cedar.rs  keys.rs  lib.rs  oidc.rs  policies.rs  rbac.rs  saml.rs  simple_auth.rs  totp.rs  users.rs  webauthn.rs
crates/auth/src/webauthn/: credential.rs  crypto.rs  error.rs  mod.rs  protocol.rs
crates/backend-router/: Cargo.toml
crates/backend-router/src/: consistent_hash_backend.rs  error.rs  lib.rs  policy.rs  router.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: auth_totp.rs  crypto.rs  crypto_ops.rs  dav.rs  dav_parsing.rs  dav_protocol.rs  owncloud_sync.rs  storage.rs  webdav_ops.rs
crates/cache/: Cargo.toml
crates/cache/src/: cache.rs  error.rs  lib.rs  lru.rs  stats.rs  tests.rs
crates/caldav/: Cargo.toml
crates/caldav/src/: calendar.rs  error.rs  event.rs  handler.rs  ical.rs  lib.rs  report.rs
crates/chaos/: Cargo.toml  README.md
crates/chaos/experiments/: cpu_saturation.toml  disk_failure.toml  memory_pressure.toml  network_partition.toml
crates/chaos/src/: cpu.rs  disk.rs  lib.rs  memory.rs  network.rs  orchestrator.rs
crates/chaos/tests/: integration.rs
crates/circuit-breaker/: Cargo.toml
crates/circuit-breaker/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  commands.rs  main.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: client.rs  error.rs  ffi.rs  lib.rs  types.rs
crates/common/: Cargo.toml  README.md
crates/common/benches/: path_bench.rs  simd_bench.rs  xml_bench.rs
crates/common/src/: audit.rs  auth.rs  chunk.rs  conflict.rs  error.rs  format.rs  format_proptest.rs  gdpr.rs  http_client.rs  lib.rs  metadata.rs  metadata_proptest.rs  mime.rs  multitenancy.rs  notifications.rs  path.rs  path_proptest.rs  pools.rs  scheduling.rs  server_context.rs  storage.rs  webdav.rs  xml_escape.rs  xml_escape_proptest.rs  zeroize.rs
crates/common/src/simd/: bulk.rs  checksum.rs  compare.rs  mod.rs
crates/config-manager/: Cargo.toml
crates/config-manager/src/: config.rs  error.rs  lib.rs  loader.rs  tests.rs  validator.rs
crates/consistent-hash/: Cargo.toml
crates/consistent-hash/src/: key.rs  lib.rs  ring.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: cas.rs  fs_util.rs  lib.rs  metadata.rs  nas_backend.rs  object_store_backend.rs  persistence.rs  presigned.rs  search.rs  sqlx_metadata.rs  storage.rs  wasm.rs  wasm_abi.rs
crates/crdt/: Cargo.toml
crates/crdt/src/: document.rs  lib.rs  text.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: lib.rs  ring_provider.rs  traits.rs
crates/dav/: Cargo.toml  README.md
crates/dav/benches/: xml_bench.rs
crates/dav/proptest-regressions/: xml_ext_proptest.txt
crates/dav/src/: caldav.rs  carddav.rs  ical.rs  ical_proptest.rs  lib.rs  store.rs  vcard.rs  vcard_proptest.rs  xml_ext.rs  xml_ext_proptest.rs
crates/dav/src/store/: address_book.rs  (+3 more)
crates/desktop/: Cargo.toml  MOBILE.md  build.rs  sync-frontend.sh  tauri.conf.json
crates/desktop/capabilities/: default.json  mobile.json
crates/desktop/frontend/: ferro-ui-156b38bcecba3abd.js  ferro-ui-156b38bcecba3abd_bg.wasm  ferro-ui-472872029f34844f.js  ferro-ui-472872029f34844f_bg.wasm  index.html  web-1ed63343b2732737.js  web-67dfc90724f7cfa6.js  web-67dfc90724f7cfa6_bg.wasm  web-ad44675cbc5b2557.js  web-ad44675cbc5b2557_bg.wasm
crates/desktop/icons/: README.md
crates/desktop/mobile/: BUILD.md
crates/desktop/src/: android.rs  commands.rs  config.rs  gui.rs  lib.rs  macos_integration.rs  main.rs  mobile.rs  mobile_commands.rs  mount.rs  nautilus_extension.py  overlay.rs  rclone.rs  shell_integration.rs  tauri_commands.rs  tray.rs
crates/desktop/tests/: sync_integration.rs
crates/distributed/: Cargo.toml
crates/distributed/src/: consensus.rs  erasure.rs  erasure_storage.rs  error.rs  lib.rs  membership.rs  replication.rs  tcp_transport.rs  transport.rs
crates/e2ee/: Cargo.toml
crates/e2ee/src/: encrypt.rs  envelope.rs  error.rs  key.rs  lib.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: bus.rs  dead_letter.rs  error.rs  event.rs  handler.rs  lib.rs  queue.rs  replay.rs
crates/feature-flags/: Cargo.toml
crates/feature-flags/src/: lib.rs
crates/ferro-ui/: Cargo.toml  Trunk.toml  index.html
crates/ferro-ui/src/: lib.rs
crates/fuse/: Cargo.toml  README.md
crates/fuse/src/: cache.rs  fs.rs  main.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_api_auth.rs  fuzz_calcardav.rs  fuzz_circuit_breaker.rs  fuzz_config.rs  fuzz_crypto.rs  fuzz_escape_xml.rs  fuzz_fips.rs  fuzz_ical.rs  fuzz_lock_request.rs  fuzz_path_normalize.rs  fuzz_proppatch.rs  fuzz_vcard.rs  fuzz_wasm_magic.rs  fuzz_xml.rs
(+1330 files in other folders)
