[workspace]
members = [
    "crates/crdt",
    "crates/core",
    "crates/common",
    "crates/dav",
    "crates/server",
    "crates/web",
    "crates/desktop",
    "crates/cli",
    "crates/crypto",
    "crates/fuse",
    "crates/client",
    "crates/benchmarks",
    "crates/admin",
    "crates/observability",
    "crates/auth",
    "crates/webdav-handler",
    "crates/server-activitypub",
    "crates/server-webrtc",
    "crates/server-wopi",
    "crates/server-versioning",
    "crates/graphql",
    "crates/mount-nfs",
    "crates/multi-tenant",
    "crates/distributed",
    "crates/ai",
    "crates/offline",
    "crates/backend-router",
    "crates/rate-limiter",
    "crates/event-bus",
    "crates/audit-log",
    "crates/webhook",
    "crates/health",
    "crates/cache",
    "crates/wasm-host",
    "crates/server-admin",
    "crates/sync-protocol",
    "crates/consistent-hash",
    "crates/server-automation",
    "crates/server-security",
    "crates/server-webdav",
    "crates/server-sharing",
    "crates/migrate",
    "crates/selective-sync",
    "crates/caldav",
    "crates/scim",
]
resolver = "2"

[workspace.package]
version = "3.0.0"
license = "AGPL-3.0-or-later"
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
# Shared dependency versions across all crates
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
leptos = { version = "0.8", features = ["csr"] } # Update version as needed
thiserror = "2"
bytes = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
hex = "0.4"
rand = "0.8"
base64 = "0.22"
aes-gcm = { version = "0.10", features = ["aes", "heapless"] }
hkdf = "0.12"
zeroize = "1"
x25519-dalek = "2"
tonic = "0.14"
prost = "0.14"
kuchikiki = "=0.8.8-speedreader"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"


