[package]
name = "ferro-cli"
version = "1.0.0"
edition = "2021"
description = "Ferro CLI - CalDAV/CardDAV client"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
