[package]
name = "ferro-admin"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Ferro server administration panel"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { version = "0.6" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "console",
    "Storage",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Document",
    "Blob",
    "Url",
    "HtmlAnchorElement",
] }
gloo-timers = "0.3"
gloo-net = "0.5"
console_error_panic_hook = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
