[package]
name = "ferro-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Ferro server administration panel"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { version = "0.8" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "console",
    "Storage",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlElement",
    "Element",
    "Document",
    "Node",
    "Event",
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "HtmlDivElement",
    "NodeList",
] }
gloo-net = "0.5"
console_error_panic_hook = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ferro-common = { path = "../common" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
