[package]
name = "ferro-ai"
description = "AI semantic search and auto-tagging for Ferro"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"

[dev-dependencies]
