[package]
name = "ferro-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
common = { package = "ferro-common", path = "../common" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
cedar-policy = "4"
base64 = "0.22"
axum = { version = "0.7", features = ["macros"], optional = true }
dashmap = "6"
bcrypt = "0.19"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
subtle = "2"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
flate2 = "1"
urlencoding = "2"

[features]
default = ["handlers"]
handlers = ["axum"]

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
