[package]
name = "ferro-caldav"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CalDAV protocol implementation for Ferro calendar synchronization"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
publish = false

[dependencies]
ferro-dav = { path = "../dav" }
axum = { workspace = true, features = ["macros"] }
bytes = { workspace = true }
chrono = { workspace = true }
hashbrown = { workspace = true }
quick-xml = { version = "0.41", features = ["serialize"] }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
