[package]
name = "ferro-chaos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Netflix-style chaos engineering framework for resilience testing"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
publish = false

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
