[package]
name = "ferro-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line client for Ferro servers"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
publish = false

[dependencies]
ferro-common = { package = "ferro-common", path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = { version = "0.37", features = ["serialize"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"
