[package]
name = "ferro-client"
version.workspace = true
edition.workspace = true
description = "Async WebDAV client SDK for Ferro, with C-FFI for mobile"
readme = "README.md"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
keywords = ["webdav", "caldav", "carddav", "client", "mobile", "ffi"]
categories = ["asynchronous", "network-programming", "api-bindings"]
rust-version.workspace = true
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync"] }
thiserror = "2"
url = "2"
ferro-selective-sync = { path = "../selective-sync" }

[features]
default = []
ffi = ["tokio/rt-multi-thread"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
