[package]
name = "ferro-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
serde_json = "1"
async-trait = "0.1"
bytes = "1"
tokio = { version = "1", features = ["io-util", "macros", "rt"] }
