[package]
name = "ferro-common"
version.workspace = true
edition.workspace = true
description = "Core types and traits for the Ferro storage ecosystem"
readme = "README.md"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
keywords = ["storage", "webdav", "filesystem", "trait", "async"]
categories = ["asynchronous", "filesystem", "data-structures"]
rust-version.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sha2 = "0.11"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
async-trait = "0.1"
bytes = "1"
zeroize = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "macros", "rt", "sync"] }
tracing = "0.1"
mime_guess = "2"
bumpalo = "3.12"
dashmap = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[features]
default = ["simd"]
simd = []
db = ["dep:rusqlite"]
http = ["dep:reqwest"]

[dev-dependencies]
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "path_bench"
harness = false

[[bench]]
name = "xml_bench"
harness = false

[[bench]]
name = "simd_bench"
harness = false
