[package]
name = "ferro-config-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
dashmap = "6"
parking_lot = "0.12"
tracing = "0.1"
num_cpus = "1"
