[package]
name = "ferro-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
s3 = ["object_store/aws"]
gcs = ["object_store/gcp"]
azure = ["object_store/azure"]
pg = ["sqlx/postgres"]

[dependencies]
ferro-common = { package = "ferro-common", path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
object_store = "0.11"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "chrono", "uuid"] }
tantivy = "0.22"
wasmtime = "44"
wasmtime-wasi = "44"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
