[package]
name = "ferro-core"
version = "0.1.0"
edition.workspace = true
description = "Storage backends, search, and WASM runtime for Ferro"
readme = "README.md"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
keywords = ["storage", "sqlite", "tantivy", "wasmtime", "object-store", "s3"]
categories = ["asynchronous", "database", "filesystem", "wasm"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["sqlite", "search", "wasm", "object_store"]
sqlite = ["sqlx", "sqlx/sqlite"]
postgres = ["sqlx", "sqlx/postgres"]
search = ["tantivy"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
object_store = ["dep:object_store", "dep:futures", "dep:tokio-util"]
s3 = ["object_store", "object_store/aws"]
gcs = ["object_store", "object_store/gcp"]
azure = ["object_store", "object_store/azure"]

[dependencies]
ferro-common = { package = "ferro-common", path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio", "macros", "chrono", "uuid"], optional = true }
tantivy = { version = "0.26", optional = true }
wasmtime = { version = "44.0", optional = true }
wasmtime-wasi = { version = "44.0", optional = true }
object_store = { version = "0.11", optional = true }
futures = { version = "0.3", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
