[package]
name = "ferro-crdt"
version.workspace = true
edition.workspace = true
description = "CRDT implementations for real-time collaborative editing"
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[features]
wasm = []

[dev-dependencies]
serde_json = { workspace = true }
