[package]
name = "ferro-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
async-trait = "0.1"
ring = { version = "0.17", optional = true }
bcrypt = { version = "0.17", optional = true }
base64 = { version = "0.22", optional = true }
tokio = { workspace = true, features = ["rt"] }

[features]
default = ["ring", "bcrypt", "base64"]
fips = ["ring", "bcrypt", "base64"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
