[package]
name = "ferro-crypto"
version = "0.1.0"
edition.workspace = true
description = "Cryptographic primitives for the Ferro storage ecosystem"
readme = "README.md"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
keywords = ["crypto", "bcrypt", "hmac", "sha256", "encryption", "age"]
categories = ["cryptography"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = "2"
async-trait = "0.1"
ring = { version = "0.17", optional = true }
bcrypt = { version = "0.17", optional = true }
base64 = { version = "0.22", optional = true }
tokio = { workspace = true, features = ["rt"] }

[features]
default = ["ring"]
ring = ["dep:ring", "dep:bcrypt", "dep:base64"]
fips = ["ring"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
