[package]
name = "ferro-dav"
version.workspace = true
edition.workspace = true
description = "CalDAV, CardDAV, and WebDAV protocol implementations for Ferro"
readme = "README.md"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
keywords = ["caldav", "carddav", "webdav", "icalendar", "vcard", "rfc4791"]
categories = ["asynchronous", "network-programming", "web-programming"]
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["handlers"]
handlers = ["dep:axum"]
persistence = ["dep:rusqlite"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
thiserror = "2"
tokio = { workspace = true }
dashmap = "6"
quick-xml = { version = "0.37", features = ["serialize"] }
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile = "3"
