[package]
name = "ferro-dav"
version.workspace = true
edition.workspace = true
description = "CalDAV, CardDAV, and WebDAV protocol implementations for Ferro"
readme = "README.md"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
keywords = ["caldav", "carddav", "webdav", "icalendar", "vcard", "rfc4791"]
categories = ["asynchronous", "network-programming", "web-programming"]
rust-version.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["handlers"]
handlers = ["dep:axum"]
persistence = ["dep:rusqlite"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"], optional = true }
serde = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tokio = { workspace = true }
dashmap = "6"
quick-xml = { version = "0.41", features = ["serialize"] }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
common = { package = "ferro-common", path = "../common", features = ["simd"] }
hashbrown = { workspace = true, features = ["serde"] }
ahash = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile = "3"
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "xml_bench"
harness = false
