[package]
name = "ferro-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Desktop application for Ferro"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
publish = false

[[bin]]
name = "ferro-desktop"
path = "src/main.rs"

[features]
default = []
tauri = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-notification",
    "dep:roxmltree",
    "dep:reqwest",
]
mobile = [
    "dep:tauri",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-http",
    "dep:roxmltree",
    "dep:reqwest",
]
sync = [
    "dep:reqwest",
    "dep:walkdir",
    "dep:sha2",
    "dep:hex",
    "dep:base64",
    "dep:roxmltree",
]

[dependencies]
ferro-common = { package = "ferro-common", path = "../common" }
tauri = { version = "2", features = ["tray-icon", "devtools"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-http = { version = "2", optional = true }
roxmltree = { version = "0.20", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = "0.4"
walkdir = { version = "2", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true }
